--- a/GD.FinishingSystem.WEB/Views/Migration/Delete.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Migration/Delete.cshtml
@@ -1,4 +1,8 @@
-﻿@model GD.FinishingSystem.Entities.RuloMigration
+﻿@using GD.FinishingSystem.Entities.ViewModels;
+@model GD.FinishingSystem.Entities.RuloMigration
+@{
+    var areaID = ViewBag.AreaID;
+}
 
 <h1>Delete</h1>
 <h3>Are you sure you want to delete this?</h3>
@@ -85,10 +89,10 @@
             @Html.DisplayFor(model => model.Meters)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GummedMeters)
+            @Html.DisplayNameFor(model => model.SizingMeters)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GummedMeters)
+            @Html.DisplayFor(model => model.SizingMeters)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MigrationCategoryID)
@@ -126,7 +130,14 @@
     <form asp-action="Delete">
         @Html.HiddenFor(model=> model.RuloMigrationID)
         @Html.AntiForgeryToken()
-        <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Delete</button> |
-        <a asp-action="Index" asp-route-positionrulomigrationid="@Model.RuloMigrationID" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
+        @if (areaID == (int)AreaType.Desarrollos && areaID == (int)AreaType.Acabado && Model.WarehouseCategoryID == 1)
+        {
+            <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Delete</button>
+        }
+        else if (areaID == (int)AreaType.Tejido && Model.WarehouseCategoryID == 8)
+        {
+            <button type="submit" class="btn btn-sm btn-danger"><i class="lni lni-circle-minus"></i> Delete</button>
+        }
+        | <a asp-action="Index" asp-route-positionrulomigrationid="@Model.RuloMigrationID" class="btn btn-sm btn-secondary"><i class="lni lni-chevron-left-circle"></i> Back to List</a>
     </form>
 </div>
