--- a/GD.FinishingSystem.WEB/Views/Migration/Details.cshtml
+++ b/GD.FinishingSystem.WEB/Views/Migration/Details.cshtml
@@ -85,10 +85,10 @@
             @Html.DisplayFor(model => model.Meters)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GummedMeters)
+            @Html.DisplayNameFor(model => model.SizingMeters)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GummedMeters)
+            @Html.DisplayFor(model => model.SizingMeters)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.MigrationCategoryID)
